<resources>
    <string name="app_name">PocketAid</string>
    <string-array name="injuries">
        <item>Abrasion</item>
        <item>Bites</item>
        <item>Burns</item>
        <item>Concussion</item>
        <item>Contusion</item>
        <item>Fracture</item>
        <item>Laceration</item>
        <item>Puncture</item>
    </string-array>
    <string name="nearby">Nearby Hospitals</string>
    <string name="practice">Interactive Practice</string>
    <string name="about">About</string>
    <string name="setting">Settings</string>
    <string name="material">Material Selection</string>
    <string name="arrangement">Steps Arrangement</string>
    <string name="application">Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="injury_search"><font size="14">Search for an injury</font></string>
    <string name="abrasion">Abrasion</string>
    <string name="bites">Bites</string>
    <string name="burns_list">Burns</string>
    <string name="concussion">Concussion</string>
    <string name="contusion">Contusion</string>
    <string name="fracture">Fracture</string>
    <string name="laceration">Laceration</string>
    <string name="puncture">Puncture</string>
    <string name="download">DOWNLOAD</string>
    <string name="download_note">DOWNLOAD VIDEO:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stream">STREAM</string>
    <string name="hospitalName">Hospital Name</string>
    <string name="hospitalContactNumber">111111</string>
    <string-array name="languages">
        <item>English</item>
        <item>Tagalog</item>
    </string-array>
    <string name="disclaimer">"\t\tNot all of the procedures included in this application apply to all because of some uncontrollable factors like the current environment, location, materials that are needed and as well as the capabilities of the user. The developers or anyone else involved in the creation of this application will not be held liable and will not take any responsibility for the results of any attempt to use any of the presented information in this application."</string>
    <string name="grp_name">- FUNtastic FOUR</string>
    <string name="custom_map">[
  {
    "featureType": "administrative",
    "elementType": "geometry",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "poi",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "poi.medical",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "poi.medical",
    "elementType": "labels",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "poi.medical",
    "elementType": "labels.icon",
    "stylers": [
      {
        "visibility": "off"
      },
      {
        "weight": 5
      }
    ]
  },
  {
    "featureType": "road",
    "elementType": "labels.icon",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "transit",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  }
]</string>
    <string name="Download">Download</string>
    <string name="Downloaded">Downloaded</string>
    <string name="hospitalinfoName">Hospital Name:</string>
    <string-array name="spinner_options">
        <item>Recommended Procedure</item>
        <item>Alternative Procedure</item>
    </string-array>
    <string name="thermal">THERMAL BURNS</string>
    <string name="electrical">ELECTRICAL BURNS</string>
    <string name="chemical">CHEMICAL BURNS</string>
    <string name="Address">Address:</string>
    <string name="phoneNumber">Phone Number:</string>
    <string name="rating">Rating:</string>
    <string name="distance">Distance:</string>
    <string-array name="animal_bites_practice">
        <item>"Control the bleeding by applying pressure on the bite using gauze."</item>
        <item>"Do not clean serious wound. It will be cleaned at a medical facility."</item>
        <item>"Call 911 or seek medical attention immediately."</item>
    </string-array>
    <string-array name="insect_bites_practice">
        <item>"Check if the bite mark or stinger is swelling and/or bleeding."</item>
        <item>"Carefully remove the stinger using tweezers."</item>
        <item>"Wash the wound with soap and water."</item>
        <item>"Cover the area with clean bandage or gauze."</item>
        <item>"Apply a cold pack to the affected area."</item>
        <item>"Call 911 or seek medical attention if the person has trouble in breathing."</item>
    </string-array>
    <string-array name="chemical_burns_practice">
        <item>"Remove the victim's contaminated clothing while flushing it with water."</item>
        <item>"Place the affected area under running water."</item>
        <item>"Wash the affected area using mild soap before final rinse."</item>
        <item>"Cover the burned area with a dry dressing."</item>
        <item>"If the chemical is in the eye, flush it for at least 20 minutes using low-pressured water."</item>
        <item>"Seek medical attention immediately."</item>
    </string-array>
    <string-array name="third_deg_burns_practice">
        <item>"Protect the burned person from further harm."</item>
        <item>"Remove jeweleries, belts, and other restrictive items around the burned areas and the neck."</item>
        <item>"Do not immerse large severe burns in cold water."</item>
        <item>"If possible, raise the burned area above heart level"</item>
        <item>"Call 911 or seek medical attention immediately."</item>
    </string-array>
    <string-array name="concussion_practice">
        <item>"Apply cold compress or cold pack to the injured area for 20 minutes every 3 hours."</item>
        <item>"Observe your child carefully for the next 24 hours.</item>
        <item>If there are any signs of internal injury, seek medical attention immediately."</item>
    </string-array>
    <string-array name="contusion_practice">
        <item>"Apply a cold pack, or ice wrapped in a clean towel, for up to 15 minutes on the bruise."</item>
        <item>"If possible, keep the bruised area raised above the heart."</item>
        <item>"Rest the bruised area."</item>
        <item>"If needed, take pain reliever medicine to help reduce the pain."</item>
    </string-array>
    <string-array name="fracture_practice">
        <item>"In case of an open wound, control the bleeding and cover the wound with a sterile dressing."</item>
        <item>"If a bone is protruding, use a ring pad then apply a bandage to immobilize the fractured part."</item>
        <item>"Make sure that the bandage is not too tight."</item>
        <item>"Support the fractured limb in the most comfortable position."</item>
        <item>"Raise and rest a fractured foot or ankle on pillows or folded blankets."</item>
        <item>"Immobilize the fractured part using a splint or sling. Do not try to straighten the fractured limb."</item>
        <item>"Check regularly that the bandages are not too tight."</item>
        <item>"Call 911 or seek medical attention immediately in case of an open fracture or severe bleeding."</item>
    </string-array>
    <string-array name="laceration_major_practice">
        <item>"Put on disposable gloves."</item>
        <item>"Stop the bleeding by firmly pressing the wound covered with gauze."</item>
        <item>"Continue to monitor the person's condition."</item>
        <item>"Care for shock. Keep the person from getting chilled or overheated."</item>
        <item>"Have the person rest comfortable and provide reassurance."</item>
        <item>"Wash your hands immediately after giving care, even if you wore gloves."</item>
        <item>"Call 911 or seek medical attention immediately if the bleeding doesn't stop."</item>
    </string-array>
    <string-array name="laceration_minor_practice">
        <item>"Use disposable gloves."</item>
        <item>"Wash the wound thoroughly with soap and water."</item>
        <item>"Apply direct pressure for a few minutes to control any bleeding."</item>
        <item>"Apply an antibiotic ointment to a minor wound if the person has no allergies to the medication."</item>
        <item>"Cover the wound with a sterile dressing."</item>
    </string-array>
    <string-array name="abrasion_recommended">
        <item>"Wash the affected area with water and anti-bacterial soap."</item>
        <item>"Apply povidone-iodine (Betadine) solution or spray on the wound."</item>
        <item>"Cover the affected area with gauze or band-aid."</item>
        <item>"Repeat daily until fully healed."</item>
    </string-array>
    <string-array name="abrasion_alternative">
        <item>"Boil the guava leaves in water and use it as a rinse to the affected area."</item>
        <item>"Apply povidone-iodine (Betadine) solution or spray on the wound."</item>
        <item>"Cover the affected area with gauze or clean handkerchief."</item>
        <item>"Repeat daily until fully healed."</item>
    </string-array>
    <string-array name="bites_animal_recommended">
        <item>"Control the bleeding by applying pressure on the bite with a clean and dry cloth or handkerchief."</item>
        <item>"Do not clean serious wound. It will be cleaned at a medical facility."</item>
        <item>"Call 911 or seek medical attention immediately."</item>
    </string-array>
    <string-array name="bites_insect_recommended">
        <item>"Check if the bite mark or stinger is swelling and/or bleeding."</item>
        <item>"Carefully remove the stinger using tweezers."</item>
        <item>"Wash the wound with soap and water."</item>
        <item>"Cover the area with clean bandage or gauze."</item>
        <item>"Apply a cold pack to the affected area."</item>
        <item>"Call 911 or seek medical attention if the person has trouble in breathing."</item>
    </string-array>
    <string-array name="bites_insect_alternative">
        <item>"Check if the bite mark or stinger is swelling and/or bleeding."</item>
        <item>"If there is a stinger, scrape it away using a flat surface, such as a credit card."</item>
        <item>"Wash the wound with soap and water."</item>
        <item>"Cover the area with a clean handkerchief or cloth."</item>
        <item>"Apply ice cubes wrapped in a clean towel to the affected area to reduce pain and swelling."</item>
        <item>"Call 911 or seek medical attention if the person has trouble in breathing."</item>
    </string-array>
    <string-array name="burns_thermal_recommended">
        <item>"Hold the burned area in running water for 5 to 10 minutes or until pain is relieved."</item>
        <item>"Cover the burn with a dry, non-sticking, sterile dressing or a clean cloth."</item>
        <item>"Keep the burned area clean by washing it with mild soap and water."</item>
    </string-array>
    <string-array name="burns_chemical_recommended">
        <item>"Remove the victim's contaminated clothing while flushing it with water."</item>
        <item>"Place the burned area under running water."</item>
        <item>"Wash the affected area using mild soap before final rinse."</item>
        <item>"Cover the burned area with a dry dressing."</item>
        <item>"If the chemical is in the eye, flush it for at least 20 minutes using low-pressured water."</item>
        <item>"Seek medical attention immediately."</item>
    </string-array>
</resources>