<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jonas.pocketaid.InjuriesFragments.InjuryStepsFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinner_options"
                android:layout_gravity="start">
            </Spinner>

            <TextView
                android:id="@+id/textview_thermal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginLeft="@dimen/ten_dp"
                android:text="@string/thermal"
                android:visibility="gone"/>

            <ListView
                android:id="@+id/listview_firstaid_steps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never">
            </ListView>

            <TextView
                android:id="@+id/textview_chemical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginLeft="@dimen/ten_dp"
                android:text="@string/chemical"
                android:visibility="gone"/>

            <ListView
                android:id="@+id/listview_chemical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:overScrollMode="never">
            </ListView>

            <TextView
                android:id="@+id/textview_electrical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/ten_dp"
                android:layout_marginStart="@dimen/ten_dp"
                android:layout_marginLeft="@dimen/ten_dp"
                android:text="@string/electrical"
                android:visibility="gone"/>

            <ListView
                android:id="@+id/listview_electrical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:overScrollMode="never">
            </ListView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
