<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_map_bg">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="110dp"
        android:textSize="15dp"
        android:layout_alignTop="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:id="@+id/textview_hospitalnameinfo"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#000"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:paddingTop="5dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:id="@+id/textview_hospitaladdress"
        android:layout_alignBaseline="@+id/textview_placeID"
        android:layout_alignBottom="@+id/textview_placeID"
        android:layout_toRightOf="@+id/textview_placeID"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:layout_alignBottom="@+id/textView_phoneNumber"
        android:layout_alignLeft="@+id/textview_hospitalnameinfo"
        android:layout_alignStart="@+id/textview_hospitalnameinfo"
        android:id="@+id/textview_phonenumberinfo" />

    <TextView
        android:text="@string/hospitalinfoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="110dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:id="@+id/textView5"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:id="@+id/textview_placeID"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/phoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:id="@+id/textView_phoneNumber"
        android:layout_below="@+id/textview_hospitaladdress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:layout_below="@+id/textView_phoneNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="15dp"
        android:textColor="#000"
        android:id="@+id/textView_distance"
        android:layout_below="@+id/textview_phonenumberinfo"
        android:layout_alignLeft="@+id/textview_hospitaladdress"
        android:layout_alignStart="@+id/textview_hospitaladdress" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textview_hospitaladdress">

        <fragment android:id="@+id/map_hospitalOnly"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            tools:context=".Fragments.NearbyFragment"/>

    </LinearLayout>

    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/ic_call_hospt"
        android:id="@+id/image_callhospital"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:elevation="0dp"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/textView_distance"
        android:layout_toRightOf="@+id/textView5"
        android:layout_toEndOf="@+id/textView5" />

    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/ic_dir_hospt_v2"
        android:id="@+id/image_gotohospital"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_alignTop="@+id/image_callhospital"
        android:layout_toRightOf="@+id/textview_phonenumberinfo"
        android:layout_toEndOf="@+id/textview_phonenumberinfo" />


</RelativeLayout>
